fix pages on mobile hor

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -219,14 +219,21 @@
             right 0
             color #C4C4C4
             font-family 'Credit Card', 'Roboto', sans-serif
-            font-size 12px
+            font-size 10px
             letter-spacing .1em
             text-align center
             text-transform uppercase
             user-select none
 
             & span
-                font-size 21px
+                font-size 16px
+                
+            // @media $mq.iphone6
+            //     top 8px
+            //     font-size 12px
+                
+            //     & span
+            //         font-size 21px
 
             @media $mq.not_mobile
                 top 28px
